--- a/.env
+++ b/.env
@@ -1,26 +1,4 @@
- TWILIO_ACCOUNT_SID="AC5999f48e92da6b428d8f5f8f96dfaf89"
- TWILIO_AUTH_TOKEN="79b07cd0c9c6900f8ed2a669bb5d4a01"
- TWILIO_FROM_NUMBER="+12512202603"
- TO_NUMBER="+918865037375"
-# $Env:TWILIO_ACCOUNT_SID="AC5999f48e92da6b428d8f5f8f96dfaf89"
-# $Env:TWILIO_AUTH_TOKEN="79b07cd0c9c6900f8ed2a669bb5d4a01"
-
-# const twilio = require("twilio");
-# const accountSid = process.env.TWILIO_ACCOUNT_SID;
-# const authToken = process.env.TWILIO_AUTH_TOKEN;
-# const client = twilio(accountSid, authToken);
-
-# async function createMessage() {
-#   const message = await client.messages.create({
-#     body: "This is the ship that made the Kessel Run in fourteen parsecs?",
-#     from: "+12512202603",
-#     to: "+918865037375",
-#   });
-
-#   console.log(message.body);
-# }
-
-# createMessage();
-
-
-
+ TWILIO_ACCOUNT_SID="xxxxxxxxx"
+ TWILIO_AUTH_TOKEN="xxxxxxxxxxxxxxxxx"
+ TWILIO_FROM_NUMBER="+1xxxxxxx"
+ TO_NUMBER="+91xxxxxxxx"
